[project]
name = "sslcommerz-python"
version = "1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SSLCOMMERZ Developers", email = "sajan.sslwireless@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
