[project]
name = "pysslcommerz"
version = "1.1"
description = "Python client for SSLcommerz. Forked from official client."
readme = "README.md"
authors = [
    { name = "SSLCOMMERZ Developers", email = "sajan.sslwireless@gmail.com" },
    { name = "rozari0", email = "rozario@duck.com" }
]
requires-python = ">=3.9"
dependencies = ["requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
